EDAN01/minizinc-1.6/tests/flattening/test-mzn2fzn/misc_array_array1d_bad.exp
mzn2fzn:
  error: 
  misc_array_array1d_bad.mzn:1 
  In variable declaration for 'x1'. 
  Array index ranges do not match.
