EDAN01/minizinc-1.6/tests/flattening/test-mzn2fzn/misc_array_array1d_bad.mzn
array [3..5] of var 1..3: x1 = array1d(1..3, [1, 2, 3]);
solve satisfy;
